workloads/applications/base/paasport-admin-dashboard-integration/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paasport-admin-dashboard-app-sandbox-integration
  namespace: paasport-admin-dashboard
  labels:
    app: paasport-admin-dashboard-app-sandbox-integration
spec:
  replicas: 1
  selector:
    matchLabels:
      app: paasport-admin-dashboard-app-sandbox-integration
  template:
    metadata:
      labels:
        app: paasport-admin-dashboard-app-sandbox-integration
    spec:
      serviceAccountName: paasport-admin-dashboard-integration
      containers:
        - image: 744692937981.dkr.ecr.us-east-1.amazonaws.com/paasport-admin-dashboard-integration:latest
          name: paasport-admin-dashboard-sandbox-integration
          ports:
            - containerPort: 8080
              name: http
          imagePullPolicy: Always
      imagePullSecrets:
        - name: us-east-1-ecr-registry
